[package]
name = "ghstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4.0", features = ["json", "charset"] }
serde_json = "1.0.78"
chrono = "0.4.19"
clap = { version = "3.0.14", features = ["derive"] }
